Переписал структуру проекта