@@ -2,6 +2,8 @@ package ru.daniil4jk.strongram.webhook;
 
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
+import org.jetbrains.annotations.Contract;
+import org.jetbrains.annotations.NotNull;
 import org.telegram.telegrambots.client.jetty.JettyTelegramClient;
 import org.telegram.telegrambots.meta.api.methods.botapimethods.BotApiMethod;
 import org.telegram.telegrambots.meta.api.methods.updates.DeleteWebhook;
@@ -10,76 +12,75 @@ import org.telegram.telegrambots.meta.api.objects.Update;
 import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
 import org.telegram.telegrambots.meta.generics.TelegramClient;
 import org.telegram.telegrambots.webhook.TelegramWebhookBot;
-import ru.daniil4jk.strongram.core.Bot;
-import ru.daniil4jk.strongram.core.TelegramClientProvider;
+import ru.daniil4jk.strongram.core.bot.Bot;
 
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
+import java.util.List;
 
 @Slf4j
 public class WebhookBotWrapper implements TelegramWebhookBot {
     private final SetWebhook setWebhook;
     private final Bot bot;
-    private final TelegramClient client;
     @Getter
     private final String botPath;
 
-    public WebhookBotWrapper(URL botUrl, Bot bot) {
+    public WebhookBotWrapper(@NotNull URL botUrl, Bot bot) {
         this(new SetWebhook(botUrl.toString()), bot);
     }
 
-    public WebhookBotWrapper(SetWebhook setWebhook, Bot bot) {
+    public WebhookBotWrapper(@NotNull SetWebhook setWebhook, @NotNull Bot bot) {
         this.setWebhook = setWebhook;
-        try {
-            botPath = new URL(setWebhook.getUrl()).getPath();
-        } catch (MalformedURLException e) {
-            throw new RuntimeException("Cannot get path from url from setWebhook", e);
-        }
+        botPath = URI.create(setWebhook.getUrl()).getPath();
 
         this.bot = bot;
-        if (bot instanceof TelegramClientProvider provider) {
-            var client = provider.getClient();
-            if (client == null) {
-                client = createClient(bot.getCredentials().getBotToken());
-                if (provider.clientRequired()) {
-                    provider.setClient(client);
-                }
-            }
-            this.client = client;
-        } else {
-            this.client = createClient(bot.getCredentials().getBotToken());
+
+        if (!bot.hasClient()) {
+            bot.setClient(createClient(bot.getCredentials().getToken()));
         }
     }
 
-    private TelegramClient createClient(String token) {
+    @Contract("_ -> new")
+    private @NotNull TelegramClient createClient(String token) {
         return new JettyTelegramClient(token);
     }
 
     @Override
     public void runSetWebhook() {
         try {
-            client.execute(setWebhook);
+            bot.getClient().execute(setWebhook);
         } catch (TelegramApiException e) {
-            log.error("Can`t setWebhook to bot on the path {}", getBotPath(), e);
+            log.error("Can`t setWebhook to bot on the path {}", botPath, e);
         }
     }
 
     @Override
     public void runDeleteWebhook() {
         try {
-            client.execute(new DeleteWebhook());
+            bot.getClient().execute(new DeleteWebhook());
         } catch (TelegramApiException e) {
-            log.warn("Can`t deleteWebhook to bot on the path {}", getBotPath(), e);
+            log.warn("Can`t deleteWebhook to bot on the path {}", botPath, e);
         }
     }
 
     @Override
     public BotApiMethod<?> consumeUpdate(Update update) {
         try {
-            return bot.process(update);
+            List<BotApiMethod<?>> responses = bot.apply(update);
+            BotApiMethod<?> lastMessage = responses.remove(responses.size() - 1);
+            responses.forEach(this::sendResponse);
+            return lastMessage;
         } catch (Exception e) {
             log.error(e.getLocalizedMessage(), e);
         }
         return null;
+    }
+
+    private void sendResponse(BotApiMethod<?> response) {
+        try {
+            bot.getClient().execute(response);
+        } catch (TelegramApiException e) {
+            log.warn("Sending response failed", e);
+        }
     }
 }
